--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="header">
+    <div class="to-do-header">
       <h1>TO-DO LIST</h1>
     </div>
     <div class="main-content">
@@ -21,7 +21,9 @@
           <button id="submission" onclick="displayList()">Add Task</button>
         </div>
       </div>
-      <ol class="list" id="list"></ol>
+      <div class="list-items-div">
+        <ol class="list-items" id="list-items"></ol>
+      </div>
     </div>
 
     <script src="script.js"></script>
